ccnavmenus/force-app/main/default/objects/Menu_Item__c/fields/Mega_Menu_Description__c.field-meta.xml
<CustomField>
    <fullName>Mega_Menu_Description__c</fullName>
    <inlineHelpText>Optional: Short description for Mega Menu items.</inlineHelpText>
    <label>Mega Menu Description</label>
    <type>TextArea</type>
</CustomField>