ccnavmenus/force-app/main/default/objects/Menu_Item__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Menu Item</description>
    <inlineHelpText>Parent Menu Item which the current menu item falls under in the hierarchy.</inlineHelpText>
    <label>Menu Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent and Child Menu Item should belong to the same Menu.</errorMessage>
        <filterItems>
            <field>$Source.Menu__c</field>
            <operation>equals</operation>
            <valueField>Menu_Item__c.Menu__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>