ccnavmenus/force-app/main/default/objects/Menu_Item__c/fields/Menu_Path__c.field-meta.xml
<CustomField>
    <fullName>Menu_Path__c</fullName>
    <formula>Menu__r.Name + &quot; - &quot; +
RPAD(

LPAD(
IF(NOT(ISBLANK( TEXT(
Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Position__c))),
TEXT(Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF(NOT(ISBLANK( TEXT(
Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Position__c))),
TEXT(Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF(NOT(ISBLANK( TEXT(
Menu_Item__r.Menu_Item__r.Menu_Item__r.Position__c))),
TEXT(Menu_Item__r.Menu_Item__r.Menu_Item__r.Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF(NOT(ISBLANK( TEXT(
Menu_Item__r.Menu_Item__r.Position__c))),
TEXT(Menu_Item__r.Menu_Item__r.Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF( NOT(ISBLANK( TEXT(
Menu_Item__r.Position__c ))),
TEXT(Menu_Item__r.Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF( NOT(ISBLANK( TEXT(
Position__c ))),
TEXT(Position__c),&quot;&quot;),3,&quot;0&quot;)
,
18,
&quot;0&quot;)</formula>
    <label>Menu Path</label>
    <type>Text</type>
</CustomField>