ccnavmenus/force-app/main/default/objects/Menu_Item__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Public</description>
    <inlineHelpText>If checked, the menu item will be shown to unauthenticated guest users, assuming that the guest user has access to the parent menu record.</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>