ccnavmenus/force-app/main/default/objects/Menu_Item__c/fields/SLDS_Icon__c.field-meta.xml
<CustomField>
    <fullName>SLDS_Icon__c</fullName>
    <defaultValue>&quot;utility:connected_apps&quot;</defaultValue>
    <label>SLDS Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>