ccnavmenus/force-app/main/default/objects/Menu_Item__c/fields/SLDS_Icon_Position__c.field-meta.xml
<CustomField>
    <fullName>SLDS_Icon_Position__c</fullName>
    <defaultValue>&quot;left&quot;</defaultValue>
    <description>SLDS Icon Position</description>
    <inlineHelpText>Position of the SLDS icon to the left or the right of the menu label, if an icon is rendered.</inlineHelpText>
    <label>SLDS Icon Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>left</fullName>
            </value>
            <value>
                <fullName>right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>