ccnavmenus/force-app/main/default/objects/Menu_Item__c/validationRules/Too_Many_Levels.validationRule-meta.xml
<ValidationRule>
    <fullName>Too_Many_Levels</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(
Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__r.Menu_Item__c
))</errorConditionFormula>
    <errorDisplayField>Menu_Item__c</errorDisplayField>
    <errorMessage>You&apos;ve reached the maximum allowed number of levels in depth.</errorMessage>
</ValidationRule>